--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3'
 services:
 
-    postgres:
-        image: postgres
-        container_name: postgres
-        ports:
-            - 5432:5432
-        volumes:
-            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-        environment:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: postgres
-            POSTGRES_DB: speedrun
-            POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
+    # postgres:
+    #     image: postgres
+    #     container_name: postgres
+    #     ports:
+    #         - 5432:5432
+    #     volumes:
+    #         - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    #     environment:
+    #         POSTGRES_USER: postgres
+    #         POSTGRES_PASSWORD: postgres
+    #         POSTGRES_DB: speedrun
+    #         POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
 
     api:
         build:
@@ -20,15 +20,15 @@ services:
             dockerfile: "./Dockerfile"
         ports: 
             - 8080:8080
-        depends_on: 
-            - 'postgres'
+        # depends_on: 
+        #     - 'postgres'
         command: ["sh", "-c", "cd /go/speedrun-1st/src/cmd && go run main.go"]
         volumes:
             - .:/go/speedrun-1st/src
         environment:
             POSTGRES_USER: "postgres"
-            POSTGRES_PASSWORD: "postgres"
-            POSTGRES_HOST: "postgres"
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_HOST: "34.85.10.123"
             POSTGRES_DATABASE: "speedrun"
             HOST: "0.0.0.0"
             PORT: 8080
