remove magic number

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -26,10 +26,10 @@ services:
         volumes:
             - .:/go/speedrun-1st/src
         environment:
-            POSTGRES_USER: "postgres"
+            POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-            POSTGRES_HOST: "34.85.10.123"
-            POSTGRES_DATABASE: "speedrun"
+            POSTGRES_HOST: ${POSTGRES_HOST}
+            POSTGRES_DATABASE: ${POSTGRES_DATABASE}
             HOST: "0.0.0.0"
             PORT: 8080
             TZ: Asia/Tokyo
