--- a/web/package.json
+++ b/web/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@angular/youtube-player": "^9.2.0",
+    "angular-twitch": "0.0.3",
     "ngx-youtube-player": "^7.1.1",
     "rxjs": "~6.5.4",
+    "sprintf-js": "^1.1.2",
     "tslib": "^1.10.0",
+    "twitch-wrapper-ts": "^1.0.3",
     "url-parse": "^1.4.7",
     "zone.js": "~0.10.2"
   },
