--- a/web/angular.json
+++ b/web/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sample": {
+    "speedrun1st": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/sample",
+            "outputPath": "dist/speedrun1st",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sample:build"
+            "browserTarget": "speedrun1st:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "sample:build:production"
+              "browserTarget": "speedrun1st:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "sample:build"
+            "browserTarget": "speedrun1st:build"
           }
         },
         "test": {
@@ -116,18 +116,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "sample:serve"
+            "devServerTarget": "speedrun1st:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "sample:serve:production"
+              "devServerTarget": "speedrun1st:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "sample",
+  "defaultProject": "speedrun1st",
   "cli": {
     "analytics": false
   }
